--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -223,8 +223,8 @@ display-flex {
   width: auto;
   background: #9F9F9F;
   color: #fff;
-  margin-right: 20px;
-  padding: 16px 17px;
+  margin-right: 10px;
+  padding: 16px 15px;
   font-size: 13px;
   border: none;
   border-radius: 5px;
@@ -245,7 +245,8 @@ display-flex {
   width: auto;
   background: #4966b1;
   color: #fff;
-  padding: 16px 17px;
+  margin-right: 10px;
+  padding: 16px 15px;
   font-size: 13px;
   border: none;
   border-radius: 5px;
@@ -378,7 +379,8 @@ display-flex {
   color:#A4A4A4; }
   
   .form-submit {
-  margin-top:20px; 
+    margin-top:20px; 
+    text-align: center;
   }
   
   @media screen and (max-width: 1024px) {
@@ -390,7 +392,7 @@ display-flex {
   max-width: 100%; } }
   @media screen and (max-width: 480px) {
   .appointment-form {
-  padding: 10px 30px 30px 30px; } }  
+  padding: 10px 20px 30px 20px; } }  
 
 video {
   background-color: #CBCBCB;
